--- a/main.html
+++ b/main.html
@@ -10,7 +10,26 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+<form>
+	<h1>Feedback Form</h1>
 
+	<label for="name">Name</label>
+	<input type="text" id="name" minlength="3" maxlength="50">
+
+	<label for="portfolio">URL</label>
+	<input type="url" id="portfolio" name="portfolio">
+
+	<label for="favcolor">favourite colour</label>
+	<select id="favcolor">
+		<option>col1</option>
+		<option>col2</option>
+		<option>col3</option>
+	</select>
+
+	<label for="likeness">Likeness</label>
+	<input type="range" id="likeness" min="1" max="100">
+	
+	</form>
 </body>
 
 </html>
