--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-<form>
+<form method="post">
 	<h1>Feedback Form</h1>
 
 	<label for="name">Name</label>
@@ -20,15 +20,12 @@
 	<input type="url" id="portfolio" name="portfolio">
 
 	<label for="favcolor">favourite colour</label>
-	<select id="favcolor">
-		<option>col1</option>
-		<option>col2</option>
-		<option>col3</option>
-	</select>
+	<input type="color" id="favcolor">
 
 	<label for="likeness">Likeness</label>
 	<input type="range" id="likeness" min="1" max="100">
 	
+
 	</form>
 </body>
 
