--- a/main.html
+++ b/main.html
@@ -19,8 +19,8 @@
 	<label for="portfolio">URL</label>
 	<input type="url" id="portfolio" name="portfolio">
 
-	<label for="favcolor">favourite colour</label>
-	<input type="color" id="favcolor">
+	<label for="favColor">favourite colour</label>
+	<input type="color" id="favColor">
 
 	<label for="likeness">Likeness</label>
 	<input type="range" id="likeness" min="1" max="100">
